# ChessBot_v2

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  chessbot.sh  init.sh  lichess-bot.default.config.yml  pyproject.toml  setup.sh  test.sh  test_py.sh  training_info.json
python/: Profile.prof  benchmarks.ipynb  config.py  engine.py  initialize.py  main.ipynb  model.py  results.ipynb  results_v1.ipynb  setup.py  strength_test.py  test.ipynb  test.py  time_control.py  train.py  utils.py
python/actionspace/: __init__.py  map_b.json  map_w.json
python/configs/: __init__.py  config.toml  model.toml
python/mcts/: __init__.py  c.html  c.pxd  c.pyx  c_old2.html
python/rchess/: __init__.py
python/selfplay/: __init__.py  __main__.py  c.pxd  c.pyx
python/strength_test/: __init__.py  __main__.py  c.pxd  c.pyx
python/tests/unit/: test_configs.py  test_image.py  test_image_flipped.py  test_utils.py
results/: ELO Rating.json  epoch_loss.json  epoch_policy_head_accuracy.json  epoch_policy_head_loss.json  epoch_value_head_accuracy.json  epoch_value_head_loss.json
results/lichess/: blitz.json  bullet.json  elo.json
rust/rchess/: Cargo.toml
rust/rchess/benches/: my_benchmark.rs  perft.rs
rust/rchess/src/: board.rs  color.rs  errors.rs  lib.rs  move.rs  perft.rs  piece.rs  prng.rs  square.rs
rust/rchess/src/bitboard/: masks.rs  mod.rs  ops.rs
rust/rchess/src/statics/: btwn.rs  lines.rs  magics.rs  mod.rs  (+2 more)
rust/rchess/tests/: integration_test.rs
scripts/: init.sh  selfplay.sh  setup.sh  strength_test.sh  test.sh
test_suites/: STS1-STS15_LAN_v3.epd
(+7 files in other folders)
